--- a/data-engineer.html
+++ b/data-engineer.html
@@ -171,7 +171,7 @@ with?...</p>
 <p>6 days ago ... Data Engineer - Taiwan Taipei. Taipei. Software Engineers. Full Time. Apply for 
 this job. In Xfers, you'll likely get experience on many different projects across?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c/apply'>Mattermost - Data Engineer (Remote)</a></h5> 
+<h5><a href='https://jobs.lever.co/mattermost/9acc3876-4e0f-40eb-ac23-cd79e1dcbf4c/apply'>Mattermost - Data Engineer (Remote)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... On a scale of 1 (not a fit) to 10 (perfect fit), how would you rate your potential fit 
 with the role for which you're applying??. Please tell us why you selected such a
@@ -218,7 +218,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://workable.com/j/32463D2197?viewed=true'>Monese - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://workable.com/j/32463D2197?viewed=true'>Monese - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Apply online for the job of Data Engineer at Monese.</p>
 <hr/>
@@ -248,7 +248,7 @@ broad disciplines from software, artificial intelligence/machine learning, elect
 <p><span class="badge badge-light">Bangalore Bangalore</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs-getty.icims.com/jobs/3440/data-engineer/job'>Data Engineer in Los Angeles, California | Careers at The Getty</a></h5> 
+<h5><a href='https://jobs-getty.icims.com/jobs/3440/data-engineer/job'>Data Engineer in Los Angeles, California | Careers at The Getty</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... The Getty is now hiring a Data Engineer in Los Angeles, California. Review all of 
 the job details and apply today!</p>
@@ -281,11 +281,11 @@ talk to?...</p>
 <p>Jul 15, 2019 ... Tracer is a marketing data aggregation and reporting platform. Our technology 
 was born out of the challenges facing today's marketers. Incubated within?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999679257626-data-engineer-genomics-'>Kelly Services Data Engineer (Genomics) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999679257626-data-engineer-genomics-'>Kelly Services Data Engineer (Genomics) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/cloudnc/9528db85-fb01-43a2-9d07-e8c1846015bb'>CloudNC Ltd. - Data Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/cloudnc/9528db85-fb01-43a2-9d07-e8c1846015bb'>CloudNC Ltd. - Data Engineer</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
@@ -387,7 +387,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Chicago</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1786662'>Job Application for Data Engineering Manager at Omada Health</a></h5> 
+<h5><a href='https://boards.greenhouse.io/omadahealth/jobs/1786662'>Job Application for Data Engineering Manager at Omada Health</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -403,7 +403,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://semanticbits.workable.com/j/33550F2088'>SemanticBits - Jobs: Data Engineer (Scala/Spark) - Remote - Apply online</a></h5> 
+<h5><a href='https://semanticbits.workable.com/j/33550F2088'>SemanticBits - Jobs: Data Engineer (Scala/Spark) - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light">Virginia, United States</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -428,7 +428,7 @@ working in Datawarehouse, Data lake, Hadoop landscape. 3. Expert level?...</p>
 <p>4 days ago ... Senior Data Engineering Manager. San Francisco, CA. Data Engineering ? Data 
 Engineering. Full-time. Apply for this job. Quizlet's mission is to help students?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4324797002'>Job Application for Senior Data Engineer - Marketing Intelligence at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4324797002'>Job Application for Senior Data Engineer - Marketing Intelligence at SumUp</a></h5> 
 <p><span class="badge badge-light">S?o Paulo</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
